Mudanças e reorganizações nos arquivos estruturais do javascriptm e melhorias no layout

--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,5 @@ RewriteCond %{SCRIPT_FILENAME} !-d
 
 RewriteRule ^(.*)$ index.php?url=$1
 
-RewriteCond %{HTTPS} on
+RewriteCond %{HTTPS} off
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
