Alteração do numero para contato via whatsapp e criação deu uma classe para mostrar o icone do whatsapp quando etiver em modo responsivel

--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,5 @@ RewriteCond %{SCRIPT_FILENAME} !-d
 
 RewriteRule ^(.*)$ index.php?url=$1
 
-RewriteCond %{HTTPS} off
+RewriteCond %{HTTPS} on
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
